--- a/machine_learning_trading_bot.ipynb
+++ b/machine_learning_trading_bot.ipynb
@@ -225,7 +225,7 @@
    "outputs": [],
    "source": [
     "# Plot Strategy Returns to examine performance\n",
-    "(1 + signals_df['Strategy Returns']).cumprod().plot()"
+    "(1 + signals_df['Strategy Returns']).cumprod().plot(title=\"Signal Strategy Cumulative Returns\")"
    ]
   },
   {
@@ -246,6 +246,15 @@
     "\n",
     "# Review the DataFrame\n",
     "X.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X.tail()"
    ]
   },
   {
@@ -312,7 +321,7 @@
     "y_test = y.loc[training_end+DateOffset(hours=1):]\n",
     "\n",
     "# Review the X_test DataFrame\n",
-    "X_train.head()"
+    "X_test.head()"
    ]
   },
   {
@@ -348,16 +357,16 @@
    "outputs": [],
    "source": [
     "# From SVM, instantiate SVC classifier model instance\n",
-    "svm_model = # YOUR CODE HERE\n",
+    "svm_model = svm.SVC()\n",
     " \n",
     "# Fit the model to the data using the training data\n",
-    "svm_model = # YOUR CODE HERE\n",
+    "svm_model = svm_model.fit(X_train_scaled, y_train)\n",
     " \n",
     "# Use the testing data to make the model predictions\n",
-    "svm_pred = # YOUR CODE HERE\n",
+    "svm_pred = svm_model.predict(X_test_scaled)\n",
     "\n",
     "# Review the model's predicted values\n",
-    "# YOUR CODE HERE\n"
+    "svm_pred[:10]\n"
    ]
   },
   {
@@ -374,10 +383,10 @@
    "outputs": [],
    "source": [
     "# Use a classification report to evaluate the model using the predictions and testing data\n",
-    "svm_testing_report = # YOUR CODE HERE\n",
+    "svm_testing_report = classification_report(y_test, svm_pred)\n",
     "\n",
     "# Print the classification report\n",
-    "# YOUR CODE HERE\n"
+    "print(svm_testing_report)\n"
    ]
   },
   {
@@ -396,16 +405,15 @@
     "# Create a new empty predictions DataFrame.\n",
     "\n",
     "# Create a predictions DataFrame\n",
-    "predictions_df = # YOUR CODE HERE\n",
-    "\n",
+    "predictions_df = pd.DataFrame(index=X_test.index)\n",
     "# Add the SVM model predictions to the DataFrame\n",
-    "predictions_df['Predicted'] = # YOUR CODE HERE\n",
+    "predictions_df['Predicted'] = svm_pred\n",
     "\n",
     "# Add the actual returns to the DataFrame\n",
-    "predictions_df['Actual Returns'] = # YOUR CODE HERE\n",
+    "predictions_df['Actual Returns'] = signals_df[\"Actual Returns\"]\n",
     "\n",
     "# Add the strategy returns to the DataFrame\n",
-    "predictions_df['Strategy Returns'] = # YOUR CODE HERE\n",
+    "predictions_df['Strategy Returns'] = predictions_df['Actual Returns'] * predictions_df['Predicted']\n",
     "\n",
     "# Review the DataFrame\n",
     "display(predictions_df.head())\n",
@@ -426,7 +434,7 @@
    "outputs": [],
    "source": [
     "# Plot the actual returns versus the strategy returns\n",
-    "# YOUR CODE HERE\n"
+    "(1 + predictions_df[['Actual Returns','Strategy Returns']]).cumprod().plot(title=\"Actual Returns vs. Strategy Returns, 2016-2021\")\n"
    ]
   },
   {
@@ -496,7 +504,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "### Step 1:  Import a new classifier, such as `AdaBoost`, `DecisionTreeClassifier`, or `LogisticRegression`. (For the full list of classifiers, refer to the [Supervised learning page](https://scikit-learn.org/stable/supervised_learning.html) in the scikit-learn documentation.)"
    ]
@@ -508,10 +518,10 @@
    "outputs": [],
    "source": [
     "# Import a new classifier from SKLearn\n",
-    "# YOUR CODE HERE\n",
+    "from sklearn.tree import DecisionTreeClassifier\n",
     "\n",
     "# Initiate the model instance\n",
-    "# YOUR CODE HERE\n"
+    "clf = DecisionTreeClassifier(random_state=1)\n"
    ]
   },
   {
@@ -528,13 +538,13 @@
    "outputs": [],
    "source": [
     "# Fit the model using the training data\n",
-    "model = # YOUR CODE HERE\n",
+    "model = clf.fit(X_train,y_train)\n",
     "\n",
     "# Use the testing dataset to generate the predictions for the new model\n",
-    "pred = # YOUR CODE HERE\n",
+    "pred = clf.predict(X_test)\n",
     "\n",
     "# Review the model's predicted values\n",
-    "# YOUR CODE HERE\n"
+    "pred[:10]\n"
    ]
   },
   {
@@ -557,10 +567,10 @@
    "outputs": [],
    "source": [
     "# Use a classification report to evaluate the model using the predictions and testing data\n",
-    "# YOUR CODE HERE\n",
+    "tree_pred_report = classification_report(y_test, pred)\n",
     "\n",
     "# Print the classification report\n",
-    "# YOUR CODE HERE\n"
+    "print(tree_pred_report)\n"
    ]
   },
   {
@@ -572,19 +582,19 @@
     "# Create a new empty predictions DataFrame.\n",
     "\n",
     "# Create a predictions DataFrame\n",
-    "# YOUR CODE HERE\n",
+    "tree_predictions_df = pd.DataFrame(index=X_test.index)\n",
     "\n",
     "# Add the SVM model predictions to the DataFrame\n",
-    "# YOUR CODE HERE\n",
+    "tree_predictions_df['Tree_predictions'] = pred\n",
     "\n",
     "# Add the actual returns to the DataFrame\n",
-    "# YOUR CODE HERE\n",
+    "tree_predictions_df['Actual Returns'] = signals_df[\"Actual Returns\"]\n",
     "\n",
     "# Add the strategy returns to the DataFrame\n",
-    "# YOUR CODE HERE\n",
+    "tree_predictions_df['Strategy Returns'] = predictions_df['Actual Returns'] * predictions_df['Predicted']\n",
     "\n",
     "# Review the DataFrame\n",
-    "# YOUR CODE HERE\n"
+    "tree_predictions_df\n"
    ]
   },
   {
@@ -594,7 +604,14 @@
    "outputs": [],
    "source": [
     "# Plot the actual returns versus the strategy returns\n",
-    "# YOUR CODE HERE"
+    "(1 + tree_predictions_df[['Strategy Returns','Actual Returns']]).plot()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Trial of 2nd ML library from sklearn KNearest Neighbors Classifier"
    ]
   },
   {
@@ -602,12 +619,175 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from sklearn.neighbors import KNeighborsClassifier"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "kNN = KNeighborsClassifier(n_neighbors = 3)\n",
+    "kNN = kNN.fit(X_train_scaled, y_train)\n",
+    "kNN_pred = kNN.predict(X_test_scaled)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Use a classification report to evaluate the model using the predictions and testing data\n",
+    "kNN_pred_report = classification_report(y_test, kNN_pred)\n",
+    "\n",
+    "# Print the classification report\n",
+    "print(kNN_pred_report)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Trial of kNN Classifier with approximatly 50% of data points used for testing (larger testing set)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Select the start of the training period\n",
+    "training_begin = X.index.min()\n",
+    "training_end = X.index.min() + DateOffset(months=36)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Generate the X_train and y_train DataFrames\n",
+    "X_train = X.loc[training_begin:training_end]\n",
+    "y_train = y.loc[training_begin:training_end]\n",
+    "\n",
+    "# Review the X_train DataFrame\n",
+    "X_train.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Generate the X_train and y_train DataFrames\n",
+    "X_test = X.loc[training_end:]\n",
+    "y_test = y.loc[training_end:]\n",
+    "\n",
+    "# Review the X_train DataFrame\n",
+    "X_test.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Scale the features DataFrames\n",
+    "\n",
+    "# Create a StandardScaler instance\n",
+    "scaler = StandardScaler()\n",
+    "\n",
+    "# Apply the scaler model to fit the X-train data\n",
+    "X_scaler = scaler.fit(X_train)\n",
+    "\n",
+    "# Transform the X_train and X_test DataFrames using the X_scaler\n",
+    "X_train_scaled = X_scaler.transform(X_train)\n",
+    "X_test_scaled = X_scaler.transform(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "kNN2 = KNeighborsClassifier(n_neighbors = 3)\n",
+    "kNN2 = kNN.fit(X_train_scaled, y_train)\n",
+    "kNN2_pred = kNN.predict(X_test_scaled)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Use a classification report to evaluate the model using the predictions and testing data\n",
+    "kNN2_pred_report = classification_report(y_test, kNN2_pred)\n",
+    "\n",
+    "# Print the classification report\n",
+    "\n",
+    "print(kNN2_pred_report)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Added Comparison"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print('Model 1: Classification Report for  SVM Classifier with 69month training set, and 3 month testing set')\n",
+    "print(svm_testing_report)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print('Model 2: Classification Report for Decision Trees Classifier with 69month training set, and 3 month testing set')\n",
+    "print(tree_pred_report)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print('Model 3: Classification Report for kNearest Neighbors Classifier with 69month training set, and 3 month testing set')\n",
+    "print(kNN_pred_report)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print('Model 3 - modified: Classification Report for kNearest Neighbors Classifier with 36month training set, and 36 month testing set')\n",
+    "print(kNN2_pred_report)"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (dev)",
+   "display_name": "dev",
    "language": "python",
    "name": "dev"
   },
@@ -621,7 +801,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.7.13"
   }
  },
  "nbformat": 4,
